# todo

./: .gitignore  README.md  db.sqlite3  pyproject.toml
core/: urls.py
core/settings/: base.py  dev.py
home/: urls_api_token.py
home/api_auth/: serializers.py  urls_api_auth.py  views.py
home/migrations/: 0003_userprofile.py  0004_rename_verify_code_userprofile_verification_code.py
home/models/: __init__.py  users.py
home/templates/auth/: base.html  verify_result.html
home/utils/: __init__.py  decorators.py  email.py
